Fix layout issue

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ div.container_hidden {
 
 .box-left {
   width:740px;
-  height:210px;
+  height:420px;
   display:inline-block;
 }
 
